--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navi Studio | Agence digitale</title>
   </head>
-  <body class="bg-FFF6E4">
+  <body class="bg-FFF6E4 overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
