[ADD] refactor paragraphe défilant

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   }
 </style>
 
-<body class="bg-FFF6E4">
+<body class="bg-FFF6E4 overflow-x-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
