[ADD] change bg website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Navi Studio | Agence digitale</title>
 </head>
 
-<body class="bg-FFF6E4 overflow-x-hidden">
+<body class="bg-C22E2E overflow-x-hidden">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
