[ADD] update all page legality 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="./logo-bit.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Navi Studio ♡ Agence digitale ⋅ Web design ⋅ Développement ⋅ Marketing digital ⋅ Stratégie de marque</title>
+  <title>navi studio. ♡ Agence digitale ⋅ Web design ⋅ Développement ⋅ Marketing digital ⋅ Stratégie de marque</title>
 </head>
 
 <body class="bg-C22E2E overflow-x-hidden">
