--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>navi studio. #♡ Agence digitale | Web design | Développement | Marketing digital | Stratégie de marque</title>
+  <title>Navi Studio | Agence digitale | Web design | Développement | Marketing digital | Stratégie de marque
+  </title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJW2JDF0QF"></script>
   <script>
