--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <link rel="canonical" href="https://navistudio.io/">
+  <meta name="author" content="Louisa Mélissa">
+  <link href="./main.css" rel="stylesheet">
+  <meta name="keywords" content="navistudio, Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta name="robots" content="index, follow">
   <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Navi Studio. | Agence digitale</title>
+  <title>Navi Studio. | Agence digitale, n'attendez plus pour déployer votre projet digital</title>
+  <meta property="og:title" content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://navistudio.io/assets/logo-5-950508d6.png">
+  <meta property="og:url" content="https://navistudio.io/">
+  <meta property="og:image:height">
+  <meta property="og:image:alt" content="Navi Studio Homepage">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJW2JDF0QF"></script>
   <script>
