--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Navi Studio. | Agence digitale</title>
-  <meta property="og:title" content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta property="og:title" content="Navi Studio | Agence digitale">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://navistudio.io/assets/logo-5-950508d6.png">
   <meta property="og:url" content="https://navistudio.io/">
+  <meta property=”og:description”
+    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet digital" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
   <!-- Google tag (gtag.js) -->
