--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
 </head>
 
-<body class="bg-C22E2E overflow-x-hidden">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
