--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
 </head>
 
-<body class="transition-colors duration-1000">
+<body class="transition duration-300">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
