--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet digital">
-  <link rel="canonical" href="https://navistudio.io/">
-  <meta name="author" content="Louisa Mélissa">
-  <link href="./main.css" rel="stylesheet">
   <meta name="keywords" content="navistudio, Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta name="author" content="Louisa Mélissa">
   <meta name="robots" content="index, follow">
-  <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Navi Studio. | Agence digitale</title>
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'" />
+  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <meta http-equiv="Content-Security-Policy" content="default-src https:">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'none'; font-src https://fonts.gstatic.com; img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'" />
+  <link rel="canonical" href="https://navistudio.io/">
+  <link href="./main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
   <meta property="og:title" content="Navi Studio | Agence digitale">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://navistudio.io/assets/logo-5-950508d6.png">
@@ -20,7 +24,10 @@
     content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet digital" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <!-- Google tag (gtag.js) -->
+  <title>Navi Studio. | Agence digitale</title>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"
+    integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
+    crossorigin="anonymous"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJW2JDF0QF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
