--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'" />
   <meta http-equiv="X-Frame-Options" content="DENY" />
-  <meta http-equiv="Content-Security-Policy" content="default-src https:">
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; font-src https://fonts.gstatic.com; img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src https:"> -->
   <link rel="canonical" href="https://navistudio.io/">
   <link href="./main.css" rel="stylesheet">
   <link rel="shortcut icon" href="/resume/logo-bit.png" type="image/x-icon">
