update, refactor all code and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="Louisa Mélissa">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'" />
-  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'" /> -->
+  <!-- <meta http-equiv="X-Frame-Options" content="DENY" /> -->
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src https:"> -->
   <link rel="canonical" href="https://navistudio.io/">
   <link href="./main.css" rel="stylesheet">
@@ -35,9 +35,9 @@
   </script>
 </head>
 
-<body class="transition duration-200">
+<body class="transition duration-200 bg-C22E2E overflow-x-hidden">
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/Main.jsx"></script>
 </body>
 
 </html>
