update, refactor all code and css*

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </script>
 </head>
 
-<body class="transition duration-200 bg-C22E2E overflow-x-hidden">
+<body class="transition duration-200 bg-C22E2E">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
