--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
 </head>
 
-<body class="transition duration-200 bg-c22e2e">
+<body class="bg-D83939 transition duration-200">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
