--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   </script>
 </head>
 
-<body class="bg-D83939 transition duration-200">
+<body
+  class="bg-D83939 overflow-x-hidden antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
