--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body
-  class="bg-D83939 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
+  class="bg-D83939 transition duration-200 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
