update html tilte

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <link rel="canonical" href="https://navistudio.io/">
   <link href="./main.css" rel="stylesheet">
   <link rel="shortcut icon" href="/resume/LogoBit.png" type="image/x-icon">
-  <meta property="og:title" content="Navi Studio | Agence digitale">
+  <meta property="og:title"
+    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://navistudio.io/assets/LogoMainNaviStudio-950508d6.png">
   <meta property="og:url" content="https://navistudio.io/">
   <meta property=”og:description”
-    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet digital" />
+    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <title>Navi Studio. | Agence digitale</title>
+  <title>Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"
     integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
     crossorigin="anonymous"></script>
