--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet digital">
-  <meta name="keywords" content="navistudio, Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta name="keywords" content="Navi Studio, Agence digitale, n'attendez plus pour déployer votre projet digital">
   <meta name="author" content="Louisa Mélissa">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -12,15 +11,15 @@
   <link href="./main.css" rel="stylesheet">
   <link rel="shortcut icon" href="/resume/LogoBit.png" type="image/x-icon">
   <meta property="og:title"
-    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique">
+    content="Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://navistudio.io/assets/LogoMainNaviStudio-950508d6.png">
   <meta property="og:url" content="https://navistudio.io/">
   <meta property=”og:description”
-    content="Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique" />
+    content="Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <title>Navi Studio | Agence digitale, n'attendez plus pour déployer votre projet numérique</title>
+  <title>Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"
     integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
     crossorigin="anonymous"></script>
@@ -32,11 +31,9 @@
     gtag('config', 'G-ZJW2JDF0QF');
   </script>
 </head>
-
 <body
   class="bg-d83939 transition duration-200 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
-
 </html>
