--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet digital">
@@ -19,7 +20,7 @@
     content="Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <title>Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique</title>
+  <title>Navi Studio / Agence digitale / Design / Développement / Marketing digital / Stratégie de marque</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"
     integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
     crossorigin="anonymous"></script>
@@ -31,9 +32,11 @@
     gtag('config', 'G-ZJW2JDF0QF');
   </script>
 </head>
+
 <body
   class="bg-d83939 transition duration-200 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
+
 </html>
