add btn section to scroll

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Louisa Mélissa">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="canonical" href="https://navistudio.io/">
+  <link rel="canonical" href="https://www.navistudio.io/">
   <link href="./main.css" rel="stylesheet">
   <link rel="shortcut icon" href="/resume/LogoBit.png" type="image/x-icon">
   <meta property="og:title"
@@ -20,7 +20,7 @@
     content="Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <title>Navi Studio / Agence digitale / Design / Développement / Marketing digital / Stratégie de marque</title>
+  <title>Navi Studio / Agence digitale / Design / Développement / Marketing digital</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"
     integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
     crossorigin="anonymous"></script>
