--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet digital">
-  <meta name="keywords" content="Navi Studio, Agence digitale, n'attendez plus pour déployer votre projet digital">
+  <meta name="description" content="Agence digitale, n'attendez plus pour déployer votre projet numérique">
+  <meta name="keywords" content="Navi Studio, Agence digitale, n'attendez plus pour déployer votre projet numérique">
   <meta name="author" content="Louisa Mélissa">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
