update title all site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     content="Navi Studio / Agence digitale, n'attendez plus pour déployer votre projet numérique" />
   <meta property="og:image:height">
   <meta property="og:image:alt" content="Navi Studio Homepage">
-  <title>Navi Studio / Agence digitale / Design / Développement / Marketing digital</title>
+  <title>Navi Studio | Agence digitale | Design | Développement | Marketing digital</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"
     integrity="sha384-R4/ztc4ZlRqWjqIuvf6RX5yb/v90qNGx6fS48N0tRxiGkqveZETq72KgDVJCp2TC"
     crossorigin="anonymous"></script>
