--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
 </head>
 <body
-  class="transition duration-200 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
+  class="overflow-x-hidden transition duration-200 antialiased selection:bg-fff6e4 selection:text-c22e2e dark:selection:bg-blue-200 text-black">
   <div id="root"></div>
   <script type="module" src="/src/Main.jsx"></script>
 </body>
